# grimoire-diagnostics

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
bindings/python/: CMakeLists.txt  bindings.cpp  pyproject.toml  setup.py
bindings/python/test/: test_shared_log.py
core/: CMakeLists.txt
core/include/grimoire/: CorrelationGraph.hpp  DiagnosticAggregator.hpp  FileExporter.hpp
core/src/: CorrelationGraph.cpp  DiagnosticAggregator.cpp  Diagnostics.cpp  FileExporter.cpp  main.cpp
core/tests/: CorrelationGraphTests.cpp  DiagnosticsTests.cpp  FileExporterTests.cpp
include/: Diagnostics.h  Diagnostics.hpp  Exporter.h  Exporter.hpp  FileExporter.h  FileExporter.hpp
python/: bindings.cpp
python/test/: test_diag.py  test_shared_log.py
src/: CorrelationGraph.cpp  DiagnosticAggregator.cpp  Diagnostics.cpp  FileExporter.cpp  main.cpp
tests/: CorrelationGraphTests.cpp  DiagnosticsTests.cpp  FileExporterTests.cpp
